--- a/html/theme/gPunchD/css/custom.css
+++ b/html/theme/gPunchD/css/custom.css
@@ -1494,6 +1494,7 @@ body.is-popup .transition {
   }
 }
 @media screen and (max-width: 767px) {
+  .cursor-wrap{display: none;}
   .section.section-header {
         padding-top: 1.7rem;
     }
