--- a/html/theme/gPunchD/css/main.css
+++ b/html/theme/gPunchD/css/main.css
@@ -1,5 +1,4 @@
 @charset "utf-8"; 
-/* copyright(c) WEBsiting.co.kr */
 
-/* ¸ÞÀÎÆäÀÌÁö¿¡¼­ º¯°æµÇ´Â ÄÚµå */
+/* ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½Ç´ï¿½ ï¿½Úµï¿½ */
 #ctWrap{width:100%; max-width:100%; margin:0 auto !important; }
