css 컬러 변수 수정

--- a/html/theme/gPunchD/css/custom.css
+++ b/html/theme/gPunchD/css/custom.css
@@ -3,8 +3,8 @@
   --white: #fafafa;
   --black: #0d0d0d;
   --padding: 5.556vw;
-  --ui-light-2: #d0d0d07a;
-  --ui-light: #e6e6e67a;
+  --ui-light-2: #d0d0d0;
+  --ui-light: #e6e6e6;
   --fff: white;
   --light-grey: #a7a7a7;
   --dark-grey: #4b4b4b;
